tests/baselines/reference/importCallExpressionReturnPromiseOfAny.errors.txt
tests/cases/conformance/dynamicImport/1.ts(23,29): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/dynamicImport/defaultPath.ts (0 errors) ====
    export class C {}
    
==== tests/cases/conformance/dynamicImport/1.ts (1 errors) ====
    import * as defaultModule from "./defaultPath";
    declare function getSpecifier(): string;
    declare function ValidSomeCondition(): boolean;
    declare var whatToLoad: boolean;
    declare const directory: string;
    declare const moduleFile: number;
    
    import(`${directory}\${moduleFile}`);
    import(getSpecifier());
    
    var p1 = import(ValidSomeCondition() ? "./0" : "externalModule");
    var p1: Promise<any> = import(getSpecifier());
    var p11: Promise<typeof defaultModule> = import(getSpecifier());
    const p2 = import(whatToLoad ? getSpecifier() : "defaulPath") as Promise<typeof defaultModule>;
    p1.then(zero => {
        return zero.foo();  // ok, zero is any
    });
    
    let j: string;
    var p3: Promise<typeof defaultModule> = import(j=getSpecifier());
    
    function * loadModule(directories: string[]) {
        for (const directory of directories) {
                                ~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
            const path = `${directory}\moduleFile`;
            import(yield path);
        }
    }
    